--- a/07-Backend-MVC/CarritoCompras/views/header.ejs
+++ b/07-Backend-MVC/CarritoCompras/views/header.ejs
@@ -2,22 +2,31 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="/">EPN SEARCH</a>
+  <a class="navbar-brand" href="/"><h5>EPN SEARCH</h5></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item active">
-        <a class="nav-link" href="/perfil">Perfil</a>
+        <a class="nav-link" href="/perfil"><h5>Perfil</h5></a>
+      </li>
+      <li class="dropdown">
+        <a class="nav-link" data-toggle="dropdown" href="/busqueda"><h5>Busqueda</h5> <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li class="nav-item active"><a class="nav-link" href="/busqueda">DOAJ</a></li>
+          <li class="nav-item active"><a class="nav-link"  href="/busquedaSpringer">Springer</a></li>
+          <li class="nav-item active"><a  class="nav-link" href="/busquedaScopus">Scopus</a></li>
+          <li class="nav-item active"><a class="nav-link" href="/busquedaArxiv">Arxiv</a></li>
+        </ul>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/busqueda">Busqueda </a>
+        <a class="nav-link" href="/busqueda"><h5>Busqueda</h5> </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/biblioteca">Biblioteca </a>
+        <a class="nav-link" href="/biblioteca"><h5>Biblioteca</h5> </a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/crearMisArticulos">Crear mis articulos </a>
+        <a class="nav-link" href="/crearMisArticulos"><h5>Crear mis articulos </h5></a>
       </li>
     </ul>
   </div>
